Agrega boton de ver codigo del proyecto

--- a/index.html
+++ b/index.html
@@ -222,12 +222,20 @@
             <p class="projects__card__paragraph">
               Sitio web multi pagina - Proyecto de Frontend Mentor.
             </p>
-            <a
-              class="projects__card__btn"
-              target="_blank"
-              href="https://space-tourism-nuxt-maximo-4ever.vercel.app/"
-              >Ver proyecto</a
-            >
+            <div class="projects__card__btnContainer">
+              <a
+                class="projects__card__btn"
+                target="_blank"
+                href="https://space-tourism-nuxt-maximo-4ever.vercel.app/"
+                >Ver proyecto</a
+              >
+              <a
+                class="projects__card__btn btn-view-code"
+                target="_blank"
+                href="https://github.com/Maximo4ever/Space-Tourism-with-Nuxt"
+                >Ver codigo</a
+              >
+            </div>
           </div>
         </article>
         <article class="projects__card">
@@ -247,12 +255,20 @@
             <p class="projects__card__paragraph">
               Informacion y busqueda dinámica de todos los paises.
             </p>
-            <a
-              class="projects__card__btn"
-              target="_blank"
-              href="https://Maximo4ever.github.io/Rest-countries-API/"
-              >Ver proyecto</a
-            >
+            <div class="projects__card__btnContainer">
+              <a
+                class="projects__card__btn"
+                target="_blank"
+                href="https://Maximo4ever.github.io/Rest-countries-API/"
+                >Ver proyecto</a
+              >
+              <a
+                class="projects__card__btn btn-view-code"
+                target="_blank"
+                href="https://github.com/Maximo4ever/Rest-countries-API"
+                >Ver codigo</a
+              >
+            </div>
           </div>
         </article>
         <article class="projects__card">
@@ -272,12 +288,20 @@
             <p class="projects__card__paragraph">
               Aplicacion de seguimiento de direcciones IP y dominios.
             </p>
-            <a
-              class="projects__card__btn"
-              target="_blank"
-              href="https://maximo4ever.github.io/IP-Address-Tracker/"
-              >Ver proyecto</a
-            >
+            <div class="projects__card__btnContainer">
+              <a
+                class="projects__card__btn"
+                target="_blank"
+                href="https://maximo4ever.github.io/IP-Address-Tracker/"
+                >Ver proyecto</a
+              >
+              <a
+                class="projects__card__btn btn-view-code"
+                target="_blank"
+                href="https://github.com/Maximo4ever/IP-Address-Tracker"
+                >Ver codigo</a
+              >
+            </div>
           </div>
         </article>
         <article class="projects__card">
@@ -297,12 +321,20 @@
             <p class="projects__card__paragraph">
               Acortador de enlaces guardados en el Local Storage.
             </p>
-            <a
-              class="projects__card__btn"
-              target="_blank"
-              href="https://maximo4ever.github.io/Url-Shortening-Api/"
-              >Ver proyecto</a
-            >
+            <div class="projects__card__btnContainer">
+              <a
+                class="projects__card__btn"
+                target="_blank"
+                href="https://maximo4ever.github.io/Url-Shortening-Api/"
+                >Ver proyecto</a
+              >
+              <a
+                class="projects__card__btn btn-view-code"
+                target="_blank"
+                href="https://github.com/Maximo4ever/Url-Shortening-Api"
+                >Ver codigo</a
+              >
+            </div>
           </div>
         </article>
         <article class="projects__card">
@@ -322,12 +354,20 @@
             <p class="projects__card__paragraph">
               Integración de la función "Scroll reveal" en una página.
             </p>
-            <a
-              class="projects__card__btn"
-              target="_blank"
-              href="https://maximo4ever.github.io/Fylo-Dark-Theme/"
-              >Ver proyecto</a
-            >
+            <div class="projects__card__btnContainer">
+              <a
+                class="projects__card__btn"
+                target="_blank"
+                href="https://maximo4ever.github.io/Fylo-Dark-Theme/"
+                >Ver proyecto</a
+              >
+              <a
+                class="projects__card__btn btn-view-code"
+                target="_blank"
+                href="https://github.com/Maximo4ever/Fylo-Dark-Theme"
+                >Ver codigo</a
+              >
+            </div>
           </div>
         </article>
         <article class="projects__card">
@@ -344,12 +384,20 @@
             <p class="projects__card__paragraph">
               Aplicacion de tareas con un reordenamiento dinámico.
             </p>
-            <a
-              class="projects__card__btn"
-              target="_blank"
-              href="https://app-todo-maximo-4ever.vercel.app/"
-              >Ver proyecto</a
-            >
+            <div class="projects__card__btnContainer">
+              <a
+                class="projects__card__btn"
+                target="_blank"
+                href="https://app-todo-maximo-4ever.vercel.app/"
+                >Ver proyecto</a
+              >
+              <a
+                class="projects__card__btn btn-view-code"
+                target="_blank"
+                href="https://github.com/Maximo4ever/Todo-App"
+                >Ver codigo</a
+              >
+            </div>
           </div>
         </article>
       </div>
