Reorganiza los proyectos y cambia su descripcion

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           >
             <img
               class="projects__img"
-              src="./Archivos/space-tourism.jpg"
+              src="./Archivos/proyectos/space-tourism.jpg"
               alt="Proyecto Space Tourism"
               loading="lazy"
             />
@@ -220,7 +220,8 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Space Tourism</h3>
             <p class="projects__card__paragraph">
-              Sitio web multi pagina - Proyecto de Frontend Mentor.
+              Sitio web compuesto con un enrutamiento dinámico en la navegacion
+              del mismo.
             </p>
             <div class="projects__card__btnContainer">
               <a
@@ -240,12 +241,111 @@
         </article>
         <article class="projects__card">
           <a
+            href="https://maximo4ever.github.io/Fylo-Dark-Theme/"
+            target="_blank"
+          >
+            <img
+              class="projects__img"
+              src="./Archivos/proyectos/fylo-dark.png"
+              alt="Proyecto Fylo Dark Theme"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">Fylo landing page</h3>
+            <p class="projects__card__paragraph">
+              Pagina web animada al bajar el scroll del navegador, con un diseño
+              totalmente responsivo.
+            </p>
+            <div class="projects__card__btnContainer">
+              <a
+                class="projects__card__btn"
+                target="_blank"
+                href="https://maximo4ever.github.io/Fylo-Dark-Theme/"
+                >Ver proyecto</a
+              >
+              <a
+                class="projects__card__btn btn-view-code"
+                target="_blank"
+                href="https://github.com/Maximo4ever/Fylo-Dark-Theme"
+                >Ver codigo</a
+              >
+            </div>
+          </div>
+        </article>
+        <article class="projects__card">
+          <a href="https://app-todo-maximo-4ever.vercel.app/" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/proyectos/proyecto-ecommerce.jpg"
+              alt="Proyecto Todo App"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">Ecommerce prod. page</h3>
+            <p class="projects__card__paragraph">
+              Ecommerce de zapatillas, con carrito de compras y una galeria del
+              producto.
+            </p>
+            <div class="projects__card__btnContainer">
+              <a
+                class="projects__card__btn"
+                target="_blank"
+                href="https://ecommerce-product-page-psi.vercel.app/"
+                >Ver proyecto</a
+              >
+              <a
+                class="projects__card__btn btn-view-code"
+                target="_blank"
+                href="https://github.com/Maximo4ever/Ecommerce-product-page"
+                >Ver codigo</a
+              >
+            </div>
+          </div>
+        </article>
+        <article class="projects__card">
+          <a
+            href="https://maximo4ever.github.io/Url-Shortening-Api/"
+            target="_blank"
+          >
+            <img
+              class="projects__img"
+              src="./Archivos/proyectos/shortly.png"
+              alt="Proyecto Url Shortly"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">URL Shortering API</h3>
+            <p class="projects__card__paragraph">
+              Aplicacion web que incorpora un acortador de URL, con la funcion
+              de guardarlos en el navegador.
+            </p>
+            <div class="projects__card__btnContainer">
+              <a
+                class="projects__card__btn"
+                target="_blank"
+                href="https://maximo4ever.github.io/Url-Shortening-Api/"
+                >Ver proyecto</a
+              >
+              <a
+                class="projects__card__btn btn-view-code"
+                target="_blank"
+                href="https://github.com/Maximo4ever/Url-Shortening-Api"
+                >Ver codigo</a
+              >
+            </div>
+          </div>
+        </article>
+        <article class="projects__card">
+          <a
             href="https://Maximo4ever.github.io/Rest-countries-API/"
             target="_blank"
           >
             <img
               class="projects__img"
-              src="./Archivos/rest-countries-api.png"
+              src="./Archivos/proyectos/rest-countries-api.png"
               alt="Proyecto Rest countries API"
               loading="lazy"
             />
@@ -253,7 +353,8 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Rest countries API</h3>
             <p class="projects__card__paragraph">
-              Informacion y busqueda dinámica de todos los paises.
+              Proyecto integrado con una busqueda dinámica de los paises y su
+              informacion.
             </p>
             <div class="projects__card__btnContainer">
               <a
@@ -278,7 +379,7 @@
           >
             <img
               class="projects__img"
-              src="./Archivos/IP-address-tracker.jpg"
+              src="./Archivos/proyectos/IP-address-tracker.jpg"
               alt="Proyecto IP Address Tracker"
               loading="lazy"
             />
@@ -286,7 +387,8 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">IP address tracker</h3>
             <p class="projects__card__paragraph">
-              Aplicacion de seguimiento de direcciones IP y dominios.
+              Aplicacion de seguimiento de direcciones IP y dominios, localizado
+              en el mapa.
             </p>
             <div class="projects__card__btnContainer">
               <a
@@ -299,102 +401,6 @@
                 class="projects__card__btn btn-view-code"
                 target="_blank"
                 href="https://github.com/Maximo4ever/IP-Address-Tracker"
-                >Ver codigo</a
-              >
-            </div>
-          </div>
-        </article>
-        <article class="projects__card">
-          <a
-            href="https://maximo4ever.github.io/Url-Shortening-Api/"
-            target="_blank"
-          >
-            <img
-              class="projects__img"
-              src="./Archivos/shortly.png"
-              alt="Proyecto Url Shortly"
-              loading="lazy"
-            />
-          </a>
-          <div class="projects__card__content">
-            <h3 class="projects__card__title">Url Shortering</h3>
-            <p class="projects__card__paragraph">
-              Acortador de enlaces guardados en el Local Storage.
-            </p>
-            <div class="projects__card__btnContainer">
-              <a
-                class="projects__card__btn"
-                target="_blank"
-                href="https://maximo4ever.github.io/Url-Shortening-Api/"
-                >Ver proyecto</a
-              >
-              <a
-                class="projects__card__btn btn-view-code"
-                target="_blank"
-                href="https://github.com/Maximo4ever/Url-Shortening-Api"
-                >Ver codigo</a
-              >
-            </div>
-          </div>
-        </article>
-        <article class="projects__card">
-          <a
-            href="https://maximo4ever.github.io/Fylo-Dark-Theme/"
-            target="_blank"
-          >
-            <img
-              class="projects__img"
-              src="./Archivos/fylo-dark.png"
-              alt="Proyecto Fylo Dark Theme"
-              loading="lazy"
-            />
-          </a>
-          <div class="projects__card__content">
-            <h3 class="projects__card__title">Fylo dark theme</h3>
-            <p class="projects__card__paragraph">
-              Integración de la función "Scroll reveal" en una página.
-            </p>
-            <div class="projects__card__btnContainer">
-              <a
-                class="projects__card__btn"
-                target="_blank"
-                href="https://maximo4ever.github.io/Fylo-Dark-Theme/"
-                >Ver proyecto</a
-              >
-              <a
-                class="projects__card__btn btn-view-code"
-                target="_blank"
-                href="https://github.com/Maximo4ever/Fylo-Dark-Theme"
-                >Ver codigo</a
-              >
-            </div>
-          </div>
-        </article>
-        <article class="projects__card">
-          <a href="https://app-todo-maximo-4ever.vercel.app/" target="_blank">
-            <img
-              class="projects__img"
-              src="./Archivos/todo-app.jpg"
-              alt="Proyecto Todo App"
-              loading="lazy"
-            />
-          </a>
-          <div class="projects__card__content">
-            <h3 class="projects__card__title">Todo App</h3>
-            <p class="projects__card__paragraph">
-              Aplicacion de tareas con un reordenamiento dinámico.
-            </p>
-            <div class="projects__card__btnContainer">
-              <a
-                class="projects__card__btn"
-                target="_blank"
-                href="https://app-todo-maximo-4ever.vercel.app/"
-                >Ver proyecto</a
-              >
-              <a
-                class="projects__card__btn btn-view-code"
-                target="_blank"
-                href="https://github.com/Maximo4ever/Todo-App"
                 >Ver codigo</a
               >
             </div>
