Añade las tildes a la descripción de los proyectos

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Space Tourism</h3>
             <p class="projects__card__paragraph">
-              Sitio web compuesto con un enrutamiento dinámico en la navegacion
+              Sitio web compuesto con un enrutamiento dinámico en la navegación
               del mismo.
             </p>
             <div class="projects__card__btnContainer">
@@ -254,7 +254,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Fylo landing page</h3>
             <p class="projects__card__paragraph">
-              Pagina web animada al bajar el scroll del navegador, con un diseño
+              Página web animada al bajar el scroll del navegador, con un diseño
               totalmente responsivo.
             </p>
             <div class="projects__card__btnContainer">
@@ -285,7 +285,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Ecommerce prod. page</h3>
             <p class="projects__card__paragraph">
-              Ecommerce de zapatillas, con carrito de compras y una galeria del
+              Ecommerce de zapatillas, con carrito de compras y una galería del
               producto.
             </p>
             <div class="projects__card__btnContainer">
@@ -319,7 +319,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">URL Shortering API</h3>
             <p class="projects__card__paragraph">
-              Aplicacion web que incorpora un acortador de URL, con la funcion
+              Aplicación web que incorpora un acortador de URL, con la función
               de guardarlos en el navegador.
             </p>
             <div class="projects__card__btnContainer">
@@ -353,8 +353,8 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Rest countries API</h3>
             <p class="projects__card__paragraph">
-              Proyecto integrado con una busqueda dinámica de los paises y su
-              informacion.
+              Proyecto integrado con una búsqueda dinámica de los países y su
+              información.
             </p>
             <div class="projects__card__btnContainer">
               <a
@@ -387,7 +387,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">IP address tracker</h3>
             <p class="projects__card__paragraph">
-              Aplicacion de seguimiento de direcciones IP y dominios, localizado
+              Aplicación de seguimiento de direcciones IP y dominios, localizado
               en el mapa.
             </p>
             <div class="projects__card__btnContainer">
@@ -419,7 +419,7 @@
         class="contact__form"
       >
         <label class="contact__form__title">
-          ¿Tienes alguna página web en mente? Envíame un email y nos ponemos en
+          ¿Tienes algún proyecto web en mente? Envíame un email y nos ponemos en
           contacto 🧑‍💻
         </label>
         <input
