Corrige href de un proyecto

--- a/index.html
+++ b/index.html
@@ -274,7 +274,10 @@
           </div>
         </article>
         <article class="projects__card">
-          <a href="https://app-todo-maximo-4ever.vercel.app/" target="_blank">
+          <a
+            href="https://ecommerce-product-page-maximo4ever.vercel.app/"
+            target="_blank"
+          >
             <img
               class="projects__img"
               src="./Archivos/proyectos/proyecto-ecommerce.jpg"
@@ -292,7 +295,7 @@
               <a
                 class="projects__card__btn"
                 target="_blank"
-                href="https://ecommerce-product-page-psi.vercel.app/"
+                href="https://ecommerce-product-page-maximo4ever.vercel.app/"
                 >Ver proyecto</a
               >
               <a
