Organiza la carpeta de imagenes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="robots" content="index,nofollow" />
     <meta name="author" content="Eduardo maximiliano" />
     <link rel="canonical" href="https://maximo4ever.github.io/" />
-    <link rel="icon" href="Archivos/logo.jpg" />
+    <link rel="shortcut icon" href="./images/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,7 +33,7 @@
     <nav class="nav" id="navbar">
       <a href="#home"
         ><img
-          src="./Archivos/logo.jpg"
+          src="./images/logo.jpg"
           alt="Maximo 4ever - Logo"
           class="nav__logo"
       /></a>
@@ -143,13 +143,13 @@
       <div class="home__container-img">
         <img
           class="home__container-img__img"
-          src="./Archivos/Coding_SVG.svg"
+          src="./images/Coding_SVG.svg"
           alt="Imagen ilustrativa programando"
         />
       </div>
     </header>
     <div class="services" id="services">
-      <h2 class="sub-titles">Servicios</h2>
+      <h2 class="subtitle">Servicios</h2>
       <div class="modal-container">
         <div class="modal">
           <h3 class="modal__title">Tecnologías</h3>
@@ -164,7 +164,7 @@
         <div class="services__section">
           <img
             class="services__section__img"
-            src="./Archivos/app_development_SVG.svg"
+            src="./images/services/app_development_SVG.svg"
             alt="Imagen isometrica - Frontend"
           />
           <h3 class="services__section__title">Desarrollo Frontend</h3>
@@ -177,7 +177,7 @@
         <div class="services__section">
           <img
             class="services__section__img"
-            src="./Archivos/Web_design_SVG.svg"
+            src="./images/services/Web_design_SVG.svg"
             alt="Imagen isometrica - Diseño UX/UI"
           />
           <h3 class="services__section__title">Diseño UI / UX</h3>
@@ -190,7 +190,7 @@
         <div class="services__section">
           <img
             class="services__section__img"
-            src="./Archivos/Startup_SVG.svg"
+            src="./images/services/Startup_SVG.svg"
             alt="Imagen isometrica - Mantenimiento"
           />
           <h3 class="services__section__title">Mantenimiento Web</h3>
@@ -203,7 +203,7 @@
       </div>
     </div>
     <main class="projects" id="projects">
-      <h2 class="sub-titles">Proyectos</h2>
+      <h2 class="subtitle">Proyectos</h2>
       <div class="projects__grid">
         <article class="projects__card">
           <a
@@ -212,7 +212,7 @@
           >
             <img
               class="projects__img"
-              src="./Archivos/proyectos/space-tourism.jpg"
+              src="./images/projects/space-tourism.jpg"
               alt="Proyecto Space Tourism"
               loading="lazy"
             />
@@ -246,7 +246,7 @@
           >
             <img
               class="projects__img"
-              src="./Archivos/proyectos/fylo-dark.png"
+              src="./images/projects/fylo-dark.png"
               alt="Proyecto Fylo Dark Theme"
               loading="lazy"
             />
@@ -280,7 +280,7 @@
           >
             <img
               class="projects__img"
-              src="./Archivos/proyectos/proyecto-ecommerce.jpg"
+              src="./images/projects/proyecto-ecommerce.jpg"
               alt="Proyecto Todo App"
               loading="lazy"
             />
@@ -314,7 +314,7 @@
           >
             <img
               class="projects__img"
-              src="./Archivos/proyectos/shortly.png"
+              src="./images/projects/shortly.png"
               alt="Proyecto Url Shortly"
               loading="lazy"
             />
@@ -348,7 +348,7 @@
           >
             <img
               class="projects__img"
-              src="./Archivos/proyectos/rest-countries-api.png"
+              src="./images/projects/rest-countries-api.png"
               alt="Proyecto Rest countries API"
               loading="lazy"
             />
@@ -382,7 +382,7 @@
           >
             <img
               class="projects__img"
-              src="./Archivos/proyectos/IP-address-tracker.jpg"
+              src="./images/projects/IP-address-tracker.jpg"
               alt="Proyecto IP Address Tracker"
               loading="lazy"
             />
@@ -415,7 +415,7 @@
       <div class="contact__window">
         <span class="contact__window__span">Correo enviado con exito!</span>
       </div>
-      <h2 class="sub-titles">Contáctame</h2>
+      <h2 class="subtitle">Contáctame</h2>
       <form
         action="https://formspree.io/f/mjvjjqgw"
         method="POST"
