Agrega la seccion de habilidades al portfolio

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             Creación y maquetacion de una pagina web dinámica y responsiva en el
             lado del cliente.
           </p>
-          <a class="frontend services__section__view-more">Ver mas</a>
+          <a class="frontend services__section__view-more">Ver más</a>
         </div>
         <div class="services__section">
           <img
@@ -185,7 +185,7 @@
             Diseño web con la experiencia de usuario e interfaz optima que
             tengas en mente para tu proyecto.
           </p>
-          <a class="design services__section__view-more">Ver mas</a>
+          <a class="design services__section__view-more">Ver más</a>
         </div>
         <div class="services__section">
           <img
@@ -198,7 +198,7 @@
             Mantenimiento para tu pagina web y la renovación con el mejor
             Hosting cuando lo necesites.
           </p>
-          <a class="maintenance services__section__view-more">Ver mas</a>
+          <a class="maintenance services__section__view-more">Ver más</a>
         </div>
       </div>
     </div>
@@ -411,6 +411,64 @@
         </article>
       </div>
     </main>
+    <div class="skills" id="skills">
+      <h2 class="subtitle">Habilidades</h2>
+      <!-- <p>Tecnologias que manejo:</p> -->
+      <ul class="skills__lista">
+        <li>
+          <img src="./images/skills/html.svg" alt="html icon" />
+          HTML
+        </li>
+        <li>
+          <img src="./images/skills/css3.svg" alt="css3 icon" />
+          CSS
+        </li>
+        <li>
+          <img src="./images/skills/javascript.svg" alt="javascript icon" />
+          JavaScript
+        </li>
+        <li>
+          <img src="./images/skills/node-js.svg" alt="node-js icon" />
+          Node.js
+        </li>
+        <li>
+          <img src="./images/skills/react.svg" alt="react icon" />
+          React
+        </li>
+        <li>
+          <img src="./images/skills/nextjs.svg" alt="Next" />
+          Next.js
+        </li>
+        <li>
+          <img src="./images/skills/vue.svg" alt="vue icon" />
+          Vue
+        </li>
+        <li>
+          <img src="./images/skills/nuxt-dot-js.svg" alt="nuxt icon" />
+          Nuxt.js
+        </li>
+        <li>
+          <img src="./images/skills/bootstrap.svg" alt="Bootstrap icon" />
+          Bootstrap
+        </li>
+        <li>
+          <img src="./images/skills/git.svg" alt="Git icon" />
+          Git
+        </li>
+        <li>
+          <img src="./images/skills/figma.svg" alt="Figma icon" />
+          Figma
+        </li>
+        <li>
+          <img src="./images/skills/adobe-xd.svg" alt="Adobe Xd icon" />
+          Adobe Xd
+        </li>
+        <li>
+          <img src="./images/skills/photoshop.svg" alt="Photoshop icon" />
+          Photoshop
+        </li>
+      </ul>
+    </div>
     <footer class="contact" id="contact">
       <div class="contact__window">
         <span class="contact__window__span">Correo enviado con exito!</span>
