Cambia el label de contacto

--- a/index.html
+++ b/index.html
@@ -413,7 +413,6 @@
     </main>
     <div class="skills" id="skills">
       <h2 class="subtitle">Habilidades</h2>
-      <!-- <p>Tecnologias que manejo:</p> -->
       <ul class="skills__lista">
         <li>
           <img src="./images/skills/html.svg" alt="html icon" />
@@ -480,8 +479,8 @@
         class="contact__form"
       >
         <label class="contact__form__title">
-          ¿Tienes algún proyecto web en mente? Envíame un email y nos ponemos en
-          contacto 🧑‍💻
+          ¿Tienes algún proyecto web en mente? Para más información envíame un
+          email sobre el proyecto que tienes planeado y en seguida nos ponemos en contacto 🧑‍💻
         </label>
         <input
           name="name"
