Actualiza la imagen con GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <meta name="robots" content="index,nofollow" />
     <meta name="author" content="Eduardo maximiliano" />
     <link rel="canonical" href="https://maximo4ever.github.io/" />
-    <link rel="shortcut icon" href="./images/logo.jpg" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="https://avatars.githubusercontent.com/u/82767376?s=400&u=87460c41ac5ec28ca91668311c76a2f7a292de7e&v=4"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,7 +37,7 @@
     <nav class="nav" id="navbar">
       <a href="#home"
         ><img
-          src="./images/logo.jpg"
+          src="https://avatars.githubusercontent.com/u/82767376?s=400&u=87460c41ac5ec28ca91668311c76a2f7a292de7e&v=4"
           alt="Maximo 4ever - Logo"
           class="nav__logo"
       /></a>
