Aumenta la saturacion de la paleta de colores

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </nav>
     <header class="home" id="home">
-      <div class="stars-content">
+      <div class="stars-container">
         <span class="star star1"></span>
         <span class="star star2"></span>
         <span class="star star3"></span>
@@ -155,8 +155,8 @@
           <button class="modal__btn">OK</button>
         </div>
       </div>
-      <div class="services__container-flex">
-        <div class="services__section">
+      <div class="services__container">
+        <article class="services__card">
           <img
             class="services__section__img"
             src="./images/services/app_development_SVG.svg"
@@ -168,8 +168,8 @@
             lado del cliente.
           </p>
           <a class="frontend services__section__view-more">Ver más</a>
-        </div>
-        <div class="services__section">
+        </article>
+        <article class="services__card">
           <img
             class="services__section__img"
             src="./images/services/Web_design_SVG.svg"
@@ -181,8 +181,8 @@
             tengas en mente para tu proyecto.
           </p>
           <a class="design services__section__view-more">Ver más</a>
-        </div>
-        <div class="services__section">
+        </article>
+        <article class="services__card">
           <img
             class="services__section__img"
             src="./images/services/Startup_SVG.svg"
@@ -194,7 +194,7 @@
             Hosting cuando lo necesites.
           </p>
           <a class="maintenance services__section__view-more">Ver más</a>
-        </div>
+        </article>
       </div>
     </div>
     <main class="projects" id="projects">
