Actualiza la interfaz de las habilidades

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h1 class="home__title h1">EDUARDO MAXIMILIANO</h1>
         <h3 class="home__title h3">DESARROLLADOR FRONT-END</h3>
         <p class="home__paragraph">
-          Soy un Creativo y entusiasta Desarrollador Web Front-End que está
+          Creativo y entusiasta Desarrollador Web Front-End que está
           constantemente aprendiendo nuevas tecnologías y habilidades con un
           gran gusto en el Diseño UI/UX.
         </p>
@@ -144,7 +144,7 @@
       </div>
     </header>
     <div class="services" id="services">
-      <h2 class="subtitle">Servicios</h2>
+      <h2 class="title">Servicios</h2>
       <div class="modal-container">
         <div class="modal">
           <h3 class="modal__title">Tecnologías</h3>
@@ -198,7 +198,7 @@
       </div>
     </div>
     <main class="projects" id="projects">
-      <h2 class="subtitle">Proyectos</h2>
+      <h2 class="title">Proyectos</h2>
       <div class="projects__grid">
         <article class="projects__card">
           <a
@@ -407,67 +407,89 @@
       </div>
     </main>
     <div class="skills" id="skills">
-      <h2 class="subtitle">Habilidades</h2>
-      <ul class="skills__lista">
-        <li>
-          <img src="./images/skills/html.svg" alt="html icon" />
-          HTML
-        </li>
-        <li>
-          <img src="./images/skills/css3.svg" alt="css3 icon" />
-          CSS
-        </li>
-        <li>
-          <img src="./images/skills/javascript.svg" alt="javascript icon" />
-          JavaScript
-        </li>
-        <li>
-          <img src="./images/skills/node-js.svg" alt="node-js icon" />
-          Node.js
-        </li>
-        <li>
-          <img src="./images/skills/react.svg" alt="react icon" />
-          React
-        </li>
-        <li>
-          <img src="./images/skills/nextjs.svg" alt="Next" />
-          Next.js
-        </li>
-        <li>
-          <img src="./images/skills/vue.svg" alt="vue icon" />
-          Vue
-        </li>
-        <li>
-          <img src="./images/skills/nuxt-dot-js.svg" alt="nuxt icon" />
-          Nuxt.js
-        </li>
-        <li>
-          <img src="./images/skills/bootstrap.svg" alt="Bootstrap icon" />
-          Bootstrap
-        </li>
-        <li>
-          <img src="./images/skills/git.svg" alt="Git icon" />
-          Git
-        </li>
-        <li>
-          <img src="./images/skills/figma.svg" alt="Figma icon" />
-          Figma
-        </li>
-        <li>
-          <img src="./images/skills/adobe-xd.svg" alt="Adobe Xd icon" />
-          Adobe Xd
-        </li>
-        <li>
-          <img src="./images/skills/photoshop.svg" alt="Photoshop icon" />
-          Photoshop
-        </li>
-      </ul>
+      <h2 class="title">Habilidades</h2>
+      <div class="skills__container">
+        <ul class="skills__lista">
+          <li>
+            <img src="./images/skills/html.svg" alt="HTML icon" />
+            HTML 5
+          </li>
+          <li>
+            <img src="./images/skills/css3.svg" alt="CSS3 icon" />
+            CSS 3
+          </li>
+          <li>
+            <img src="./images/skills/javascript.svg" alt="JavaScript icon" />
+            JavaScript
+          </li>
+          <li>
+            <img src="./images/skills/typescript.svg" alt="TypeScript icon" />
+            Typescript
+          </li>
+          <li>
+            <img src="./images/skills/react.svg" alt="React icon" />
+            React
+          </li>
+          <li>
+            <img src="./images/skills/vue.svg" alt="Vue icon" />
+            Vue
+          </li>
+          <li>
+            <img src="./images/skills/bootstrap.svg" alt="Bootstrap icon" />
+            Bootstrap
+          </li>
+          <li>
+            <img src="./images/skills/tailwindcss.svg" alt="Tailwindcss icon" />
+            Tailwindcss
+          </li>
+          <li>
+            <img src="./images/skills/git.svg" alt="Git icon" />
+            Git
+          </li>
+          <li>
+            <img src="./images/skills/node-js.svg" alt="Nodejs icon" />
+            Node.js
+          </li>
+          <li>
+            <img src="./images/skills/expressjs.svg" alt="Expressjs icon" />
+            Express.js
+          </li>
+          <li>
+            <img src="./images/skills/mongodb.svg" alt="MongoDB icon" />
+            MongoDB
+          </li>
+          <li>
+            <img src="./images/skills/mysql.svg" alt="MySQL icon" />
+            MySQL
+          </li>
+          <li>
+            <img src="./images/skills/nextjs.svg" alt="Next icon" />
+            Next.js
+          </li>
+          <li>
+            <img src="./images/skills/nuxt-dot-js.svg" alt="Nuxt icon" />
+            Nuxt.js
+          </li>
+          <li>
+            <img src="./images/skills/figma.svg" alt="Figma icon" />
+            Figma
+          </li>
+          <li>
+            <img src="./images/skills/adobe-xd.svg" alt="Adobe Xd icon" />
+            Adobe Xd
+          </li>
+          <li>
+            <img src="./images/skills/photoshop.svg" alt="Photoshop icon" />
+            Photoshop
+          </li>
+        </ul>
+      </div>
     </div>
     <footer class="contact" id="contact">
       <div class="contact__window">
         <span class="contact__window__span">Correo enviado con exito!</span>
       </div>
-      <h2 class="subtitle">Contáctame</h2>
+      <h2 class="title">Contáctame</h2>
       <form
         action="https://formspree.io/f/mjvjjqgw"
         method="POST"
