Cambia la descripcion de perfil

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
       <article class="home__text">
         <h2 class="home__title h2">HOLA MI NOMBRE ES</h2>
         <h1 class="home__title h1">EDUARDO MAXIMILIANO</h1>
-        <h3 class="home__title h3">DESARROLLADOR FRONT-END</h3>
+        <h3 class="home__title h3">DESARROLLADOR WEB FRONT-END</h3>
         <p class="home__paragraph">
-          Creativo y entusiasta Desarrollador Web Front-End que está
-          constantemente aprendiendo nuevas tecnologías y habilidades con un
-          gran gusto en el Diseño UI/UX.
+          Creativo, proactivo y entusiasta por la tecnología y el Desarrollo Web
+          Front-End. Cuento con amplios conocimientos en el Diseño de interfaces
+          y en la Experiencia de usuario ideal.
         </p>
         <div class="social">
           <a
