Agrega text-uppercase a los titulos

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <span class="star star6"></span>
       </div>
       <article class="home__text">
-        <h2 class="home__title h2">HOLA MI NOMBRE ES</h2>
-        <h1 class="home__title h1">EDUARDO MAXIMILIANO</h1>
-        <h3 class="home__title h3">DESARROLLADOR WEB FRONT-END</h3>
+        <h2 class="home__title h2">Hola mi nombre es</h2>
+        <h1 class="home__title h1">Eduardo Maximiliano</h1>
+        <h3 class="home__title h3">Desarrollador web Front-end</h3>
         <p class="home__paragraph">
           Creativo, proactivo y entusiasta por la tecnología y el Desarrollo Web
           Front-End. Cuento con amplios conocimientos en el Diseño de interfaces
